<resources>
    <string name="app_name">ButtonsExercises</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="red_label">Red</string>
    <string name="blue_label">Blue</string>
    <string name="green_label">Green</string>
    <string name="not_red_label">Not Red</string>
    <string name="not_blue_label">Not Blue</string>
    <string name="not_green_label">Not Green</string>
    <string name="title_activity_buttons_exercises">Buttons Exercises</string>
    <string name="color_button_label">Set Color Chosen Above</string>
</resources>